=== Version X.X.X (XX-XXX-2014) ===

* Sets default currency of currency formatter to USD.
* Horizontal axis tick labels anchored at the middle by default
* Fix issue where chart titles were not within the chart SVG bounds.
* Merges common functionality in ScatterSeries and BubbleSeries into a common PointSeries.



=== Version 1.1.0 (05-Sep-2014) ===

* Adds theming to charts and tables. By default this uses the LightTheme.
* Removes the concept of sub-series from Column and Row series. Instead, multiple bars should be represented by multiple series.
* Introduces the “Correlation Coefficient” calculator, as “insight.correlation”.
* Adjusted sorting for ColumnSeries and RowSeries. If the key-axis is ordered, all series will be sorted in ascending order, except;
  * RowSeries - sorts such that the longest bar is at the top.
  * ColumnSeries - sorts such that the longest bar is on the left.

* Renames methods to more meaningful names
  * Axis.ordered => Axis.isOrdered
  * Axis.reversedPosition => Axis.hasReversedPosition
  * Axis.showGridlines => Axis.shouldShowGridlines
  * Axis.horizontal => Axis.isHorizontal
  * Axis.display => Axis.shouldDisplay
  * Axis.tickOrientation => Axis.tickLabelOrientation
  * Axis.tickRotation => Axis.tickLabelRotation
  * Axis.labelFormat => Axis.tickLabelFormat
  * Axis.color => Axis.lineColor
  * Chart.zoomable => Chart.setInteractiveAxis
  * LineSeries.showPoints => LineSeries.shouldShowPoints

* Fixes issue with Chart titles not displaying correctly.
* Fixes issue with margins being too small when using auto margin.
* Fixes issue where tables are not redrawn after cross filter is applied.



=== Version 1.0.1 (11-Aug-2014) ===

* Fix issue with cross filtering on Bubble series.



=== Version 1.0.0 (08-Aug-2014) ===

* Adds Charts with zoomable axes, gridlines and legends.
* Adds Chart groups to show filtering of data across multiple charts.
* Adds Line, Bar/Column, Marker, Scatter and Bubble series.