@@ -4,6 +4,7 @@
 * Horizontal axis tick labels anchored at the middle by default
 * Fix issue where chart titles were not within the chart SVG bounds.
 * Merges common functionality in ScatterSeries and BubbleSeries into a common PointSeries.
+* Deprecated “ScatterSeries.pointRadius”. Use “ScatterSeries.radiusFunction” instead.
 
 
 
